@@ -366,6 +366,39 @@ angular.module('wing',[])
             return self;
         };
 
+        this.call =  function(method, uri, properties, options) {
+            var self = this;
+            var params = wing.merge(behavior.fetch_options, properties);
+            var q;
+            if (method.toLowerCase() == 'get') {
+                q = $http.get(uri, { params : params });
+            }
+            else if (method.toLowerCase() == 'delete') {
+                q = $http.delete(uri, { params : params });
+            }
+            else if (method.toLowerCase() == 'post') {
+                q = $http.post(uri, params);
+            }
+            else if (method.toLowerCase() == 'put') {
+                q = $http.put(uri, params);
+            }
+            q.success(function (data) {
+                self.properties = data.result;
+                if (typeof options !== 'undefined' && typeof options.on_success !== 'undefined') {
+                    options.on_success(data.result);
+                }
+            })
+            .error(function (data) {
+                if (typeof options !== 'undefined' && typeof options.on_error !== 'undefined') {
+                    options.on_error(data.result);
+                }
+                if (typeof behavior.on_error !== 'undefined') {
+                    behavior.on_error(data.result);
+                }
+            });
+            return self;
+        };
+        
         this.partial_update =  function(properties, options) {
             var self = this;
             var params = wing.merge(behavior.fetch_options, properties);
